# rkern

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.gcc  Makefile.llvm  README.md  make-iso.sh  multiboot-check.sh  run-qemu.sh
.github/workflows/: ci.yml  key.json.asc  key.json.gpg
analysis/: analyze.bash
analysis/report/: symbols.diff
analysis/with_lld/: kernel.s
include/: numeric_types.hpp  terminal.hpp  types.hpp  utility.hpp  vga.hpp
include/driver/: gpio.hpp
include/types/: numeric.hpp
include/utility/: binary_io.hpp  string.hpp
iso/boot/grub/: grub.cfg
notes/: .gitignore  notes.bib  notes.tex
notes/texfiles/: linker.tex  preface.tex  prerequisites.tex
notes/texfiles/general_topics/: binary_file_analysis.tex  communication_protocols.tex  kernels.tex  linker.tex
notes/texfiles/hifive_revb/: attaching_terminal.tex  flashing_with_openocd.tex  gathering_hardware_information.tex  gpio.tex  memory_map.tex
src/: boot.S  boot.asm  boot.s  kernel.cpp  linker.ld
support/scripts/: upload.bash
test/: CMakeLists.txt
test/include/: types_test.hpp
test/src/: unit_tests.cpp
